# jitsi-meet-signalling

./: Cargo.toml  README.md
src/: agent.rs  colibri.rs  conference.rs  lib.rs  tls.rs
src/xmpp/: connection.rs  jid.rs  mod.rs
tests/: two_participants.rs
