[package]
name = "jitsi-meet-signalling"
description = "Jitsi Meet signalling library"
version = "0.1.3"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/avstack/jitsi-meet-signalling"
documentation = "https://docs.rs/jitsi-meet-signalling"
authors = ["Jasper Hugo <jasper@avstack.io>"]

[dependencies]
anyhow = { version = "1", default-features = false, features = ["std", "backtrace"] }
async-trait = { version = "0.1", default-features = false }
base64 = { version = "0.21", default-features = false, features = ["std"] }
colibri = { version = "0.1", default-features = false }
futures = { version = "0.3", default-features = false }
jitsi-jingle-sdp = { path = "../jitsi-jingle-sdp", version = "0.2", default-features = false }
jitsi-xmpp-parsers = { version = "0.1", path = "../gst-meet/jitsi-xmpp-parsers", default-features = false }
maplit = { version = "1", default-features = false }
native-tls = { version = "0.2", default-features = false, optional = true }
once_cell = { version = "1", default-features = false, features = ["std"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rustls = { version = "0.20", default-features = false, features = ["logging", "tls12"], optional = true }
rustls-native-certs = { version = "0.6", default-features = false, optional = true }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", default-features = false, features = ["time"] }
tokio-tungstenite = { version = "0.18", default-features = false, features = ["connect"] }
tracing = { version = "0.1", default-features = false, features = ["attributes", "std"] }
uuid = { version = "1", default-features = false, features = ["v4"] }
webpki-roots = { version = "0.22", default-features = false, optional = true }
xmpp-parsers = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git", default-features = false, features = ["disable-validation"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["signal"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
  "registry",
  "smallvec",
  "parking_lot",
  "tracing-log",
] }

[features]
# Ideally we would enable rustls/dangerous_configuration only when tls-insecure is enabled, but until weak-dep-features is stabilised, that
# would cause rustls to always be pulled in.
default = ["tls-rustls-webpki-roots"]
tls-insecure = []
tls-native = ["tokio-tungstenite/native-tls", "native-tls"]
tls-native-vendored = ["tokio-tungstenite/native-tls-vendored", "native-tls/vendored"]
tls-rustls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots", "rustls", "rustls-native-certs", "rustls/dangerous_configuration"]
tls-rustls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots", "rustls", "webpki-roots", "rustls/dangerous_configuration"]

[patch.crates-io]
jid = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git" }
minidom = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git" }
